Change stream collect to toList